FEAT Benefits section added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         </div>
 
-    </header>->
+    </header>
 
     <main>
 
@@ -63,7 +63,7 @@
 
             <div class="container">
 
-                <div class="row">
+                <div class="row gutter-24">
 
                     <!-- Prima Card -->
                     <div class="col-8">
@@ -305,7 +305,148 @@
             </div>
         </section>
 
-        
+        <!-- Benefits Section -->
+        <section class="benefits-section">
+            <div class="container">
+
+                <h2 class="title-section">Benefits of working with us</h2>
+
+                <div class="row gutter-24">
+
+                    <!-- Prima Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                    <!-- Seconda Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                    <!-- Terza Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                    <!-- Quarta Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                    <!-- Quinta Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                    <!-- Sesta Card -->
+                    <div class="col-4">
+                        <div class="card card-mid">
+
+                            <span class="card-header">
+                                01
+                            </span>
+
+                            <h3 class="title-small">Hight Quality</h3>
+
+                            <p class="card-p">
+                                Lorem ipsum dolor sit amet consectetur.
+                                Obcaecati repellendus veritatis eligendi tempora numquam.
+                                Quam assumenda corporis unde porro perspiciatis?
+                            </p>
+
+                            <a href="#" class="button button--purple button-large">more</a>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
+        <!-- About us Section -->
+
 
     </main>
 
