FEAT About us added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                                 </p>
                                 <a class="button button--blue button-large" href="#">
                                     <i class="fa-brands fa-apple"></i>
-                                    App Store</a>
+                                    App Store
+                                </a>
                             </div>
 
                             <div class="col-6 card-img">
@@ -446,7 +447,61 @@
         </section>
 
         <!-- About us Section -->
+        <section class="about-us">
+            <div class="container-about-us">
+                <div class="row">
 
+                    <div class="col-8 column">
+
+                        <h2 class="title-big">About Us</h2>
+
+                        <p class="card-p">
+                            Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque
+                            eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam
+                            lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus
+                            pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit
+                            scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum
+                            velit euismod in pellentesque massa placerat duis.
+                        </p>
+
+                        <p class="card-p">
+                            Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis
+                            bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras
+                            fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie
+                            nunc non blandit massa enim. the text box. Click again or double click to start
+                            editing the text.
+                        </p>
+
+                    </div>
+
+                    <div class="col-3 column">
+                        
+                        <div class="about-us--header-right">
+                            <img class="img-about-us" src="./img/about.jpg" alt="">
+                            <!-- Quote in position absolute -->
+                            <i class="quote-icon fa-solid fa-quote-left"></i>
+                        </div>
+                        
+
+                        <p class="card-quote">
+                            I help companies
+                            tincidunt tortor
+                            aliquam nulla
+                            facilisi cras
+                            fermentum odio.
+                        </p>
+
+                        <a class="button button--purple" href="#">
+                            <i class="fa-brands fa-linkedin"></i>
+                            Find me on linkedin
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
