--- a/index.html
+++ b/index.html
@@ -503,9 +503,61 @@
 
         </section>
 
+        <!-- Get Started Section -->
+        <section class="get-started">
+            <div class="container-get-started">
+
+                <h3>Get Started</h3>
+
+                <h3>Simple, Transparent Pricing</h3>
+
+                <h3>It's Free!</h3>
+
+                <p>
+                    Were still in beta and we will be for awhile. As we add more
+                    functionality, we'll look into other plans with more controls.
+                </p>
+
+                <a class="button button--white" href="#">Get Started</a>
+
+                <p>
+                    Copyright 2021 Boolean • Classe XX • 
+                    <span class="underline">
+                        <a href="#">Privacy policy</a>
+                    </span>
+                </p>
+
+            </div>
+
+        </section>
+
     </main>
 
-    <footer></footer>
+    <footer class="main-footer">
+        <div class="container-footer">
+
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit
+                Commodi maiores minima vitae vero nulla pariatur impedit!
+            </p>
+
+            <p>
+                <span class="link-footer">
+                    <a href="#">
+                        Lorem lpsum
+                    </a> 
+                </span> 
+                scelerisque maurls pellentesque
+                <span class="link-footer">
+                    <a href="#">
+                        Boolean careers
+                    </a> 
+                </span>  
+            </p>
+
+        </div>
+
+    </footer>
     
     
 </body>
