FEAT style get started added

--- a/index.html
+++ b/index.html
@@ -507,20 +507,20 @@
         <section class="get-started">
             <div class="container-get-started">
 
-                <h3>Get Started</h3>
+                <h3 class="subtitle-section">Get Started</h3>
 
-                <h3>Simple, Transparent Pricing</h3>
+                <h3 class="title-section">Simple, Transparent Pricing</h3>
 
-                <h3>It's Free!</h3>
+                <h3 class="big-text">It's Free!</h3>
 
-                <p>
+                <p class="title--xs">
                     Were still in beta and we will be for awhile. As we add more
                     functionality, we'll look into other plans with more controls.
                 </p>
 
                 <a class="button button--white" href="#">Get Started</a>
 
-                <p>
+                <p class="text-small">
                     Copyright 2021 Boolean • Classe XX • 
                     <span class="underline">
                         <a href="#">Privacy policy</a>
@@ -536,12 +536,12 @@
     <footer class="main-footer">
         <div class="container-footer">
 
-            <p>
+            <p class="text-small">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit
                 Commodi maiores minima vitae vero nulla pariatur impedit!
             </p>
 
-            <p>
+            <p class="text-small">
                 <span class="link-footer">
                     <a href="#">
                         Lorem lpsum
